crates/runtime/tests/search/snapshots/integration_models__search__cayenne-no_vector_engine-view_union_all_join-vector_search_metadata_megascience_additional_columns_response.snap
---
source: crates/runtime/tests/search/mod.rs
expression: normalize_search_response(resp)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "data": {
        "question": "How many multiples of 4 are there between 1 and 30? List them and count the total."
      },
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "The multiples of 4 between 1 and 30 are 4, 8, 12, 16, 20, 24, and 28. Counting these, there are $\\boxed{7}$ multiples."
        ]
      },
      "primary_key": {
        "id": 468
      },
      "_score": 0.77
    },
    {
      "data": {
        "question": "Which base number, when raised to the fifth power, equals thirty-two?"
      },
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "The base number is \\(\\boxed{2}\\), because \\(2^5 = 2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\)."
        ]
      },
      "primary_key": {
        "id": 1277
      },
      "_score": 0.76
    },
    {
      "data": {
        "question": "Evaluate the expression \\( 2 - 2x^2 \\), where \\( x = -3 \\)."
      },
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "\\[\n2 - 2(-3)^2 = 2 - 2(9) = 2 - 18 = \\boxed{-16}\n\\]"
        ]
      },
      "primary_key": {
        "id": 189
      },
      "_score": 0.76
    },
    {
      "data": {
        "question": "What is the fifth root of 32?"
      },
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "The fifth root of 32 is \\(\\boxed{2}\\), because \\(2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\)."
        ]
      },
      "primary_key": {
        "id": 948
      },
      "_score": 0.76
    }
  ]
}
